// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreateUserDtoMock> should generate a valid create user dto mock with bio 1`] = `
{
  "bio": "This is my bio",
  "email": "jdoe@me.com",
  "name": "John Doe",
  "password": "123456",
  "username": "jDoe453",
}
`;

exports[`<CreateUserDtoMock> should generate a valid create user dto mock with no bio 1`] = `
{
  "email": "jdoe@me.com",
  "name": "John Doe",
  "password": "123456",
  "username": "jDoe453",
}
`;
